# LazyHorn

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMistral.cmake
src/: CMakeLists.txt  Global.cpp  Global.h  Stats.cpp  Stats.h  lazy_horn.h  main.cpp
